--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="app_notification_channel_name" translatable="false">Citra</string>
     <string name="app_notification_channel_id" translatable="false">Citra</string>
     <string name="app_notification_channel_description">Citra 3DS emulator notifications</string>
-    <string name="app_notification_running">Citra is running</string>
+    <string name="app_notification_running">Citra is Running</string>
     <string name="app_game_install_description">Next, you will need to select a Game Folder. Citra will display all of the 3DS ROMs inside of the selected folder in the app.\n\nCIA ROMs, updates and DLC will need to be installed separately by clicking on the folder icon and selecting Install CIA.</string>
 
     <!-- Input related strings -->
@@ -42,56 +42,57 @@
     <string name="design_updated">Theme will update when exiting Settings</string>
 
     <!-- Core settings strings -->
-    <string name="cpu_jit">Enable CPU JIT</string>
+    <string name="cpu_jit">CPU JIT</string>
     <string name="cpu_jit_description">Uses the Just-in-Time (JIT) compiler for CPU emulation. When enabled, game performance will be significantly improved.</string>
-    <string name="init_clock">System clock type</string>
+    <string name="init_clock">Clock</string>
     <string name="init_clock_description">Set the emulated 3DS clock to either reflect that of your device or start at a simulated date and time.</string>
 
     <!-- System settings strings -->
-    <string name="init_time">System clock starting time override</string>
-    <string name="init_time_description">If the \"System clock type\" setting is set to \"Simulated clock\", this changes the fixed date and time to start at.</string>
-    <string name="emulated_region">Emulated region</string>
-    <string name="emulated_language">Emulated language</string>
-    <string name="plugin_loader">Enable 3GX Plugin Loader</string>
+    <string name="clock">Clock</string>
+    <string name="init_time">Offset Time</string>
+    <string name="init_time_description">If the clock is set to \"Simulated clock\", this changes the fixed date and time to start at.</string>
+    <string name="emulated_region">Region</string>
+    <string name="emulated_language">Language</string>
+    <string name="plugin_loader">3GX Plugin Loader</string>
     <string name="plugin_loader_description">Loads 3GX plugins from the emulated SD if they are available.</string>
-    <string name="allow_plugin_loader">Allow apps to change plugin loader state</string>
-    <string name="allow_plugin_loader_description">Allow homebrew apps to enable the plugin loader even when it is disabled.</string>
+    <string name="allow_plugin_loader">Allow Games to Change Plugin Loader State</string>
+    <string name="allow_plugin_loader_description">Allows homebrew apps to enable the plugin loader even when it is disabled.</string>
 
     <!-- Camera settings strings -->
     <string name="inner_camera">Inner Camera</string>
     <string name="outer_left_camera">Outer Left Camera</string>
     <string name="outer_right_camera">Outer Right Camera</string>
-    <string name="image_source">Image Source</string>
+    <string name="image_source">Camera Image Source</string>
     <string name="image_source_description">Sets the image source of the virtual camera. You can use an image file, or a device camera when supported.</string>
-    <string name="camera_device">Camera Device</string>
+    <string name="camera_device">Camera</string>
     <string name="camera_device_description">If the \"Image Source\" setting is set to \"Device Camera\", this sets the physical camera to use.</string>
     <string name="camera_facing_front">Front</string>
     <string name="camera_facing_back">Back</string>
     <string name="camera_facing_external">External</string>
-    <string name="image_flip">Image Flip</string>
+    <string name="image_flip">Flip</string>
 
     <!-- Graphics settings strings -->
     <string name="renderer">Renderer</string>
     <string name="graphics_api">Graphics API</string>
-    <string name="renderer_debug">Enable debug renderer</string>
+    <string name="renderer_debug">Debug Renderer</string>
     <string name="renderer_debug_description">Log additional graphics related debug information. When enabled, game performance will be significantly reduced</string>
     <string name="vsync">Enable V-Sync</string>
     <string name="vsync_description">Synchronizes the game frame rate to the refresh rate of your device.</string>
-    <string name="linear_filtering">Enable linear filtering</string>
+    <string name="linear_filtering">Linear Filtering</string>
     <string name="linear_filtering_description">Enables linear filtering, which causes game visuals to appear smoother.</string>
     <string name="texture_filter_name">Texture Filter</string>
     <string name="texture_filter_description">Enhances the visuals of games by applying a filter to textures. The supported filters are Anime4K Ultrafast, Bicubic, ScaleForce, and xBRZ freescale.</string>
-    <string name="hw_shaders">Enable hardware shader</string>
+    <string name="hw_shaders">Enable Hardware Shader</string>
     <string name="hw_shaders_description">Uses hardware to emulate 3DS shaders. When enabled, game performance will be significantly improved.</string>
-    <string name="shaders_accurate_mul">Enable accurate shader multiplication</string>
+    <string name="shaders_accurate_mul">Accurate Multiplication</string>
     <string name="shaders_accurate_mul_description">Uses more accurate multiplication in hardware shaders, which may fix some graphical bugs. When enabled, performance will be reduced.</string>
     <string name="asynchronous_gpu">Enable asynchronous GPU emulation</string>
     <string name="asynchronous_gpu_description">Uses a separate thread to emulate the GPU asynchronously. When enabled, performance will be improved.</string>
-    <string name="frame_limit_enable">Enable limit speed</string>
+    <string name="frame_limit_enable">Limit Speed</string>
     <string name="frame_limit_enable_description">When enabled, emulation speed will be limited to a specified percentage of normal speed.</string>
-    <string name="frame_limit_slider">Limit speed percent</string>
+    <string name="frame_limit_slider">Limit Speed Percent</string>
     <string name="frame_limit_slider_description">Specifies the percentage to limit emulation speed. With the default of 100% emulation will be limited to normal speed. Values higher or lower will increase or decrease the speed limit.</string>
-    <string name="internal_resolution">Internal resolution</string>
+    <string name="internal_resolution">Internal Resolution</string>
     <string name="internal_resolution_description">Specifies the resolution used to render at. A high resolution will improve visual quality a lot but is also quite heavy on performance and might cause glitches in certain games.</string>
     <string name="performance_warning">Turning off this setting will significantly reduce emulation performance! For the best experience, it is recommended that you leave this setting enabled.</string>
     <string name="debug_warning">Warning: Modifying these settings will slow emulation</string>
@@ -100,23 +101,23 @@
     <string name="factor3d">Depth</string>
     <string name="factor3d_description">Specifies the value of the 3D slider. This should be set to higher than 0% when Stereoscopic 3D is enabled.</string>
     <string name="cardboard_vr">Cardboard VR</string>
-    <string name="cardboard_screen_size">Cardboard Screen size</string>
+    <string name="cardboard_screen_size">Cardboard Screen Size</string>
     <string name="cardboard_screen_size_description">Scales the screen to a percentage of its original size.</string>
-    <string name="cardboard_x_shift">Horizontal shift</string>
+    <string name="cardboard_x_shift">Horizontal Shift</string>
     <string name="cardboard_x_shift_description">Specifies the percentage of empty space to shift the screens horizontally. Positive values move the two eyes closer to the middle, while negative values move them away.</string>
-    <string name="cardboard_y_shift">Vertical shift</string>
+    <string name="cardboard_y_shift">Vertical Shift</string>
     <string name="cardboard_y_shift_description">Specifies the percentage of empty space to shift the screens vertically. Positive values move the two eyes towards the bottom, while negative values move them towards the top.</string>
-    <string name="use_shader_jit">Use shader JIT</string>
-    <string name="use_disk_shader_cache">Use disk shader cache</string>
+    <string name="use_shader_jit">Shader JIT</string>
+    <string name="use_disk_shader_cache">Disk Shader Cache</string>
     <string name="use_disk_shader_cache_description">Reduce stuttering by storing and loading generated shaders to disk. It cannot be used without Enabling Hardware Shader.</string>
     <string name="utility">Utility</string>
-    <string name="dump_textures">Dump textures</string>
+    <string name="dump_textures">Dump Textures</string>
     <string name="dump_textures_description">Dumps textures to dump/textures/[GAME ID]</string>
-    <string name="custom_textures">Use custom textures</string>
+    <string name="custom_textures">Custom Textures</string>
     <string name="custom_textures_description">Uses custom textures found in load/textures/[GAME ID]</string>
-    <string name="preload_textures">Preload custom textures</string>
+    <string name="preload_textures">Preload Custom Textures</string>
     <string name="preload_textures_description">Loads all custom textures into memory. This feature can use a lot of memory.</string>
-    <string name="async_custom_loading">Async custom texture loading</string>
+    <string name="async_custom_loading">Async Custom Texture Loading</string>
     <string name="async_custom_loading_description">Loads custom textures in the background with worker threads to reduce loading stutter.</string>
     <!-- Premium strings -->
     <string name="premium_text">Premium</string>
@@ -126,7 +127,7 @@
     <string name="premium_settings_welcome_description">Thank you for your support!</string>
 
     <!-- Audio settings strings -->
-    <string name="audio_stretch">Enable audio stretching</string>
+    <string name="audio_stretch">Audio Stretching</string>
     <string name="audio_stretch_description">Stretches audio to reduce stuttering. When enabled, increases audio latency and slightly reduces performance.</string>
     <string name="audio_input_type">Audio Input Device</string>
 
@@ -136,7 +137,7 @@
     <string name="ini_saved">Saved settings</string>
     <string name="gameid_saved">Saved settings for %1$s</string>
     <string name="error_saving">Error saving %1$s.ini: %2$s</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
 
     <!-- Game Grid Screen-->
     <string name="grid_menu_core_settings">Settings</string>
@@ -162,7 +163,7 @@
     <string name="preferences_debug">Debug</string>
 
     <!-- ROM loading errors -->
-    <string name="loader_error_encrypted">Your ROM is encrypted</string>
+    <string name="loader_error_encrypted">Your ROM is Encrypted</string>
     <string name="loader_error_invalid_format">Invalid ROM format</string>
 
     <!-- Emulation Menu -->
@@ -178,7 +179,7 @@
     <string name="emulation_toggle_controls">Toggle Controls</string>
     <string name="emulation_control_scale">Adjust Scale</string>
     <string name="emulation_control_joystick_rel_center">Relative Stick Center</string>
-    <string name="emulation_control_dpad_slide_enable">Enable D-Pad Sliding</string>
+    <string name="emulation_control_dpad_slide_enable">D-Pad Sliding</string>
     <string name="emulation_open_settings">Open Settings</string>
     <string name="emulation_open_cheats">Open Cheats</string>
     <string name="emulation_switch_screen_layout">Landscape Screen Layout</string>
@@ -194,12 +195,12 @@
     <string name="menu_emulation_amiibo">Amiibo</string>
     <string name="menu_emulation_amiibo_load">Load</string>
     <string name="menu_emulation_amiibo_remove">Remove</string>
-    <string name="select_amiibo">Select Amiibo file</string>
-    <string name="amiibo_load_error">Error loading Amiibo</string>
+    <string name="select_amiibo">Select Amiibo File</string>
+    <string name="amiibo_load_error">Error Loading Amiibo</string>
     <string name="amiibo_load_error_message">While loading the specified Amiibo file, an error occurred. Please check that the file is correct.</string>
 
     <string name="write_permission_needed">You need to allow write access to external storage for the emulator to work</string>
-    <string name="load_settings">Loading Settings...</string>
+    <string name="load_settings">Loading Settings…</string>
 
     <string name="external_storage_not_mounted">The external storage needs to be available in order to use Citra</string>
 
@@ -247,8 +248,8 @@
     <string name="fatal_error_message">A fatal error occurred. Check the log for details.\nContinuing emulation may result in crashes and bugs.</string>
 
     <!-- Disk shader cache -->
-    <string name="preparing_shaders">Preparing shaders</string>
-    <string name="building_shaders">Building shaders</string>
+    <string name="preparing_shaders">Preparing Shaders</string>
+    <string name="building_shaders">Building Shaders</string>
 
     <!-- Cheats -->
     <string name="cheats">Cheats</string>
