--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="emulated_region">Region</string>
     <string name="emulated_language">Language</string>
     <string name="plugin_loader">3GX Plugin Loader</string>
-    <string name="plugin_loader_description">Loads 3GX plugins from the emulated SD if they are available.</string>
+    <string name="plugin_loader_description">Loads 3GX plugins from the emulated SD card if they are available.</string>
     <string name="allow_plugin_loader">Allow Games to Change Plugin Loader State</string>
     <string name="allow_plugin_loader_description">Allows homebrew apps to enable the plugin loader even when it is disabled.</string>
 
@@ -75,7 +75,7 @@
     <string name="renderer">Renderer</string>
     <string name="graphics_api">Graphics API</string>
     <string name="renderer_debug">Debug Renderer</string>
-    <string name="renderer_debug_description">Log additional graphics related debug information. When enabled, game performance will be significantly reduced</string>
+    <string name="renderer_debug_description">Log additional graphics related debug information. When enabled, game performance will be significantly reduced.</string>
     <string name="vsync">Enable V-Sync</string>
     <string name="vsync_description">Synchronizes the game frame rate to the refresh rate of your device.</string>
     <string name="linear_filtering">Linear Filtering</string>
@@ -112,13 +112,14 @@
     <string name="use_disk_shader_cache_description">Reduce stuttering by storing and loading generated shaders to disk. It cannot be used without Enabling Hardware Shader.</string>
     <string name="utility">Utility</string>
     <string name="dump_textures">Dump Textures</string>
-    <string name="dump_textures_description">Dumps textures to dump/textures/[GAME ID]</string>
+    <string name="dump_textures_description">Textures are dumped to dump/textures/[Title ID]/.</string>
     <string name="custom_textures">Custom Textures</string>
-    <string name="custom_textures_description">Uses custom textures found in load/textures/[GAME ID]</string>
+    <string name="custom_textures_description">Textures are loaded from load/textures/[Title ID]/.</string>
     <string name="preload_textures">Preload Custom Textures</string>
     <string name="preload_textures_description">Loads all custom textures into memory. This feature can use a lot of memory.</string>
     <string name="async_custom_loading">Async Custom Texture Loading</string>
-    <string name="async_custom_loading_description">Loads custom textures in the background with worker threads to reduce loading stutter.</string>
+    <string name="async_custom_loading_description">Load custom textures asynchronously with background threads to reduce loading stutter.</string>
+
     <!-- Premium strings -->
     <string name="premium_text">Premium</string>
     <string name="premium_settings_upsell">Upgrade to Premium and support Citra!</string>
